[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["LaneSh4d0w <lanesh4d0w@gmail.com>"]
description = "A tool made to give streams from Streamlink"
name = "repl_python3_query-streamlink"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^2.3.2"
python = "^3.10"
streamlink = "^2.2.0"
validators = "^0.20.0"
Flask-Limiter = "^3.3.1"
[tool.poetry.dev-dependencies]

flask==2.3.2
gunicorn==20.1.0
git+https://github.com/BellezaEmporium/streamlink@master
validators==0.20.0
Flask-Limiter==3.3.1
